wbce/templates/advancedThemeWbFlat/theme.css
/* ... */
h2.section_titel {
  margin-top: 48px;
}

h3 {
  font-size: 14px;
  line-height: 24px;
  margin: 0px 0px 24px 0px;
  color: #303641;
}

h4 {
  font-size: 14px;
  line-height: 24px;
  margin: 0px 0px;
  color: #303641;
}

h5 {
  font-size: 14px;
  line-height: 24px;
  margin: 0px 0px;
  color: #303641;
}

h6 {
  font-size: 14px;
  line-height: 24px;
  margin: 0px 0px;
  color: #303641;
}

/* Links */
a {
  color: #28609B;
  text-decoration: none;
  font-weight: bold;
}
a:hover {
  color: #517aa5;
  text-decoration: none;
  font-weight: bold;
}

/* Listen */
ul {
  margin-bottom: 24px;
  padding-left: 16px;
}

hr {
  border: 1px solid #cbcfd8;
  border-bottom: 0;
  border-right: 0;
  border-left: 0;
  margin-top: 47px;
  margin-bottom: 47px;
}

/* Textelemente */
/* Zitatblöcke */
blockquote {
  position: relative;
  font-size: 28px;
  line-height: 48px;
  font-style: italic;
  margin: 60px 0 36px 50px;
  padding-left: 55px;
}

blockquote:before {
  display: block;
  position: absolute;
  content: "\201C";
  font-size: 4em;
  color: #303641;
  left: 0;
  top: 15px;
}

/* ::text-helpers:: various text helpers for project */
span.extra_small {
  font-size: 11px;
  line-height: 24px;
}

span.large {
  font-size: 20px;
  line-height: 24px;
}

span.extra_large {
  font-size: 62px;
  line-height: 72px;
}

.nobreak {
  white-space: nowrap;
}

/* ::tables:: table-formatters */
/* table --> positioning only */
.positioning {
  width: 100%;
  margin: 0 0 24px 0;
  border-collapse: collapse;
  border-spacing: 0;
  border: none;
  background-color: transparent;
}
.positioning tr,
.positioning th,
.positioning td {
  margin: 0;
  padding: 0;
  border: none;
  background-color: transparent;
}

/* design table --> standard design in backend */
.wb_table {
  width: 100%;
  margin-bottom: 24px;
  border-collapse: collapse;
}
.wb_table td,
.wb_table th {
  padding: 6px 16px 6px 16px;
  text-align: left;
  vertical-align: middle;
}
.wb_table th,
.wb_table thead td {
  font-weight: bold;
  color: #cbcfd8;
  background-color: #303641;
  border-right: 1px solid #ffffff;
}
.wb_table th:last-child,
.wb_table thead td:last-child {
  border-right: none;
}
.wb_table tr {
  background-color: #e8eaee;
  border-bottom: 3px solid #F1F1F1;
  -webkit-transition: 0.5s;
          transition: 0.5s;
}
.wb_table tr:hover {
  background-color: #d9dde3;
}

/* ::tables-individual-page-list:: individual table pages list */
div.pages_list table {
  width: 100%;
}
div.pages_list table td {
  padding-top: 6px;
  padding-bottom: 6px;
  vertical-align: middle !important;
}
div.pages_list table td.list_actions {
  width: 30px;
  text-align: left;
}
div.pages_list table td.list_actions img {
  display: block;
}
div.pages_list table tr {
  border-bottom: 3px solid transparent;
  background-color: #e8eaee;
  -webkit-transition: 0.5s;
          transition: 0.5s;
}
div.pages_list table tr:hover {
  background-color: #d9dde3;
  -webkit-transition: 0.5s;
          transition: 0.5s;
}
div.pages_list tr.pages_list_header td {
  padding-left: 5px;
  font-weight: bold;
  color: #cbcfd8;
  background-color: #303641;
  border-left: 1px solid #ffffff;
}
div.pages_list tr.pages_list_header td:first-child {
  border: none;
}
div.pages_list tr.pages_list_header td.header_list_actions {
  width: 210px;
}
div.pages_list ul {
  margin: 0;
  font-weight: normal;
  padding: 0;
}
div.pages_list ul li {
  list-style-type: none;
  margin: 2px 0;
}

/* ::tables-individual-section-list:: table-formatters */
#page_sections tr.sectionrow {
  padding: 0 10px;
}
#page_sections tr.sectionrow td {
  border-top: 3px solid #f9f9f9;
}
#page_sections table {
  width: 100%;
}
#page_sections table tr.sections_list td {
  font-weight: bold;
  color: #cbcfd8;
  background-color: #303641;
  border-right: 1px solid #ffffff;
}
#page_sections table tr.sections_list td:last-child {
  border-right: none;
}
#page_sections table tr.sections_list td.header_list_block {
  width: 180px;
}
#page_sections table tr.sections_list td.header_list_pubdate_start {
  width: 260px;
}
#page_sections table tr.sections_list td.header_list_pubdate_end {
  width: 260px;
}
#page_sections table tr.sections_list td.header_list_sections_actions {
  width: 30px;
}
#page_sections table tr.sections_list td.header_list_section_id {
  width: 30px;
}
#page_sections table tr {
  border-bottom: 3px solid transparent;
  background-color: #e8eaee !important;
  -webkit-transition: 0.5s;
          transition: 0.5s;
}
#page_sections table tr:hover {
  background-color: #d9dde3 !important;
  -webkit-transition: 0.5s;
          transition: 0.5s;
}
#page_sections table tr:last-child {
  background-color: transparent !important;
}
#page_sections table tr td:nth-child(6),
#page_sections table tr td:nth-child(7) {
  width: 30px;
  padding-left: 0;
  padding-right: 0;
}
#page_sections table tr td:nth-child(3) select {
  width: 80%;
}
#page_sections table td.list_pubdate_start > input,
#page_sections table td.list_pubdate_end > input,
#page_sections table td.list_namesection > input {
  width: 60% !important;
  padding-top: 10px;
  padding-bottom: 11px;
}

/* ::forms:: different form elements */
/* Buttons */
button,
.wb_button,
div.button_advanced_settings a,
a.wb_button,
div.button_advanced_settings a,
input[type='button'],
input[type='submit'],
input[type='reset'] {
  -moz-box-sizing: border-box !important;
       box-sizing: border-box !important;
  display: inline-block;
  margin-top: 12px;
  padding: 4px 16px;
  font-weight: normal;
  text-decoration: none;
  color: #ffffff;
  background-color: #505b6d;
  border: none;
}
button:hover,
.wb_button:hover,
div.button_advanced_settings a:hover,
a.wb_button:hover,
div.button_advanced_settings a:hover,
input[type='button']:hover,
input[type='submit']:hover,
input[type='reset']:hover {
  background-color: #464e5e;
}
/* ... */

